# scruf_d

./: .gitignore  LICENSE.md  README.md  RecSys_SCRUF-D_Paper Summary.docx  TODO.md  __main__.py  __main__MODIFY.py  _toml_gen.py  dvc.yaml  export_dataframe.csv  paper-summary.md  params.yaml  psp_metric.py  pyproject.toml  scruf_d_outline.ipynb
.dvc/: config
conf/: config.yaml
conf/agent/: kiva.yaml  movies.yaml  synthetic.yaml
conf/allocation/: kiva_baseline.yaml  least_fair.yaml  lottery.yaml  movielens_baseline.yaml  synthetic_baseline.yaml  weighted.yaml
conf/choice/: baseline.yaml  borda.yaml  copeland.yaml  ranked_pairs.yaml  rescore.yaml
data/: .gitignore  history.csv.dvc  history.json.dvc  kiva_compat_dynamic.csv.dvc  kiva_item.csv.dvc  kiva_recs.csv.dvc
doc/: code_overview.md  paper-summary.md  sample_configuration.toml  sample_history.json
jupyter/: process_scruf_output.ipynb  run_scruf.ipynb  sample_output.csv  sample_output.json  sample_output3.json
scruf/: __init__.py  __main__.py  history.py  scruf.py
src/: allocation.py  choice.py  data.py  experiments.py  fairness_agents.py  main.py  test.py  test2.py
test/: export_c.csv  export_m.csv  export_pi.csv  export_scores.csv  list_1.csv  list_2.csv  list_3.csv  list_4.csv  list_5.csv  protected_items_test.csv  test.csv  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test_a.py  test_all.py  test_allocation.py  test_b.csv  test_b.py  test_c.py  test_m.csv  test_m.py  test_pi.py  test_protect.csv  test_protect.xlsx
tests/: scruf_test_suite.py  test_scruf_integration.py
(+80 files in other folders)
